# kaleidoscope

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gateway  Dockerfile.query-api  Dockerfile.runtime  Dockerfile.runtime.dockerignore  LICENSING.md  Makefile  README.md  RELEASING.md  compose.yaml  deny.toml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
crates/aegis/: Cargo.toml
crates/aegis/src/: catalogue.rs  lib.rs  validator.rs
crates/aegis/tests/: slice_01_validate.rs  slice_02_catalogue.rs  slice_03_audit.rs
crates/aperture/: Cargo.toml
crates/aperture-storage-sink/: Cargo.toml
crates/aperture-storage-sink/src/: lib.rs  translate.rs
crates/aperture-storage-sink/tests/: slice_01_logs_to_lumen.rs  slice_02_traces_to_ray.rs  slice_03_metrics_to_pulse.rs
crates/aperture/src/: app.rs  backpressure.rs  body_size_cap.rs  compose.rs  error.rs  lib.rs  main.rs  observability.rs  readiness.rs  shutdown.rs  sinks.rs  testing.rs  transport.rs
crates/aperture/tests/: cli_smoke.rs  invariant_no_telemetry_on_telemetry.rs  invariant_single_validator.rs  probe_gold_runner.rs  probe_refusal_visibility.rs  serve_loop_error_surfacing.rs  slice_01_walking_skeleton.rs  slice_02_http_protobuf_and_readiness.rs  slice_03_traces.rs  slice_04_metrics.rs  slice_05_backpressure.rs  slice_06_forwarding_sink.rs  slice_07_tls_schema_knob.rs  slice_08_graceful_shutdown.rs  slice_09_tls_config_reject.rs  slice_10_ingest_auth.rs  slice_10_ingest_auth_config_reject.rs  slice_11_body_size_cap.rs
crates/augur/: Cargo.toml
crates/augur/src/: anomaly.rs  lib.rs  metrics.rs  rare_event.rs  zscore.rs
crates/augur/tests/: slice_01_zscore.rs  slice_02_rare_event.rs  slice_03_self_instrumentation.rs
crates/beacon/: Cargo.toml
crates/beacon-server/: Cargo.toml
crates/beacon-server/src/: lib.rs  main.rs
crates/beacon-server/tests/: sighup_reload.rs  slo_reload.rs  smoke.rs
crates/beacon/src/: inhibition.rs  lib.rs  loader.rs  sinks.rs  slo.rs  state_machine.rs  state_store.rs  types.rs
crates/beacon/tests/: inhibition_rebuild_from.rs  slice_01_walking_skeleton.rs  slice_02_cue_catalogue.rs  slice_03_grouping_and_inhibition.rs  slice_04_sink_routing.rs  slice_05_slo_burn_rate.rs  slice_06_slo_operator_path.rs  v0_slice_01_rule_state_store_seam.rs  v1_slice_02_filebacked_durable_recovery.rs  v1_slice_02_operator_restart_survival.rs  v1_slice_03_crash_durability.rs
crates/cinder/: Cargo.toml
crates/cinder/src/: file_backed.rs  lib.rs  metrics.rs  policy.rs  store.rs  tier.rs
crates/cinder/tests/: migrate_error_display.rs  slice_01_walking_skeleton.rs  slice_02_lifecycle.rs  v1_slice_01_wal_durability.rs  v1_slice_02_snapshot.rs  v1_slice_03_torn_tail_recovery.rs  v1_slice_04_crash_durability.rs  wal_error_surfacing_red.rs
crates/codex/: Cargo.toml
crates/codex/src/: catalogue.rs  fuzzy.rs  lib.rs  lint.rs
crates/codex/tests/: invariant_public_api_smoke.rs  slice_01_walking_skeleton.rs  slice_02_otel_semconv_corpus.rs  slice_03_house_attributes.rs  slice_04_unknown_attribute_lint.rs  slice_05_fuzzy_suggestions.rs  slice_06_claims_honesty_stub_headers.rs
crates/integration-suite/: Cargo.toml
crates/integration-suite/src/: lib.rs
crates/integration-suite/tests/: v0_augur_pulse_anomaly_pipeline.rs  v0_claims_honesty_pass_2_structure.rs  v0_fast_precommit_structure.rs  v0_perf_kpi_ci_non_gating_structure.rs  v1_self_observability_survives_restart.rs  v1_six_adapters_compose_under_restart.rs  v1_six_bridges_compose_into_single_otlp_stream.rs  v1_three_adapters_compose_under_restart.rs  v1_three_durable_stores_compose.rs
crates/kaleidoscope-cli/: Cargo.toml
crates/kaleidoscope-cli/src/: lib.rs  main.rs
crates/kaleidoscope-cli/tests/: cli_binary_smoke.rs  compact.rs  evaluate_policy_subcommand.rs  get_tier_subcommand.rs  ingest_and_read_roundtrip.rs  ingest_atomic.rs  list_items_subcommand.rs  migrate_observe_otlp_flag.rs  migrate_subcommand.rs  observe_otlp_cinder_wiring.rs  observe_otlp_flag.rs  observe_otlp_read_flag.rs  place_subcommand.rs  read_predicate_flags.rs  read_time_range.rs  read_time_range_flags.rs  slice_17_unknown_flag_rejection.rs  stats_cinder_tier_distribution.rs  stats_subcommand.rs  stats_time_range.rs  unknown_item_diagnostic.rs  wal_error_surfacing_cli_skeleton.rs
crates/kaleidoscope-demo-overlay/: Cargo.toml
crates/kaleidoscope-demo-overlay/src/: clock.rs  identity.rs  lib.rs  log.rs  metric.rs  trace.rs
crates/kaleidoscope-gateway/: Cargo.toml
crates/kaleidoscope-gateway/src/: composition.rs  lib.rs  main.rs
crates/kaleidoscope-gateway/tests/: slice_01_tracing_subscriber.rs
crates/kaleidoscope-runtime/: Cargo.toml
crates/kaleidoscope-runtime/src/: lib.rs  main.rs
crates/kaleidoscope-runtime/tests/: pg1_external_otel_sdk.rs  slice_01_live_metrics.rs  slice_02_live_logs_traces.rs  slice_03_traces_with_logs.rs  slice_04_traces_error_filter.rs  slice_05_spa_origin_trace_routes.rs  slice_06_always_current_demo.rs  slice_07_traces_attribute_filter.rs  slice_08_spa_origin_log_routes.rs
crates/kaleidoscope-telemetrygen/: Cargo.toml
crates/kaleidoscope-telemetrygen/src/: lib.rs  main.rs
crates/kaleidoscope-telemetrygen/tests/: slice_02_send_to_see.rs
crates/log-query-api/: Cargo.toml
crates/log-query-api/src/: composition.rs  lib.rs  main.rs
crates/log-query-api/tests/: slice_01_logs_read.rs  slice_02_caps.rs  slice_03_severity_filter.rs  slice_04_body_contains.rs  slice_05_body_regex.rs  slice_06_pagination.rs  slice_07_tracing_subscriber.rs  slice_08_torn_tail_recovery.rs  slice_09_read_auth.rs  slice_10_auth_config_reject.rs  (+4 more)
crates/loom/: Cargo.toml
crates/lumen/: Cargo.toml
crates/otlp-conformance-harness/: Cargo.toml  README.md
crates/pulse/: Cargo.toml
crates/query-api/: Cargo.toml
crates/query-http-common/: Cargo.toml
crates/ray/: Cargo.toml
crates/self-observe/: Cargo.toml
crates/sieve/: Cargo.toml
crates/sluice/: Cargo.toml
crates/spark/: Cargo.toml
crates/strata/: Cargo.toml
crates/trace-query-api/: Cargo.toml
crates/wal-recovery/: Cargo.toml
(+1489 files in other folders)
