[workspace]
resolver = "2"
members = [
    "crates/otlp-conformance-harness",
    "crates/aperture",
    "crates/spark",
    "crates/sieve",
    "crates/codex",
    "crates/beacon",
    "crates/beacon-server",
    "crates/loom",
    "crates/aegis",
    "crates/sluice",
    "crates/lumen",
    "crates/pulse",
    "crates/ray",
    "crates/strata",
    "crates/cinder",
    "crates/augur",
    "crates/integration-suite",
    "crates/self-observe",
    "crates/aperture-storage-sink",
    "crates/kaleidoscope-gateway",
    "crates/kaleidoscope-runtime",
    "crates/kaleidoscope-cli",
    "crates/query-http-common",
    "crates/wal-recovery",
    "crates/query-api",
    "crates/log-query-api",
    "crates/trace-query-api",
    "xtask/regenerate_codex_corpus",
]

# Shared workspace metadata. Per ADR-0003 and ADR-0005 the
# `opentelemetry-proto` pin is exact and lives in the harness's own
# Cargo.toml; the workspace does not redeclare it. Other shared
# dependencies are declared here so future Phase-0 crates (Codex, Spark)
# can adopt them without re-deriving versions.

[workspace.package]
# `license` is intentionally NOT declared at the workspace level.
# Kaleidoscope splits its licensing by component role (AGPL-3.0-or-later
# for platform components, Apache-2.0 for SDK and protocol libraries).
# Each crate declares its own `license` field directly. See
# `LICENSING.md` at the repo root for the rationale and the per-crate
# table.
edition = "2021"
# MSRV bumped from 1.78 to 1.85 on 2026-05-04 (edition2024 in
# transitive deps), then from 1.85 to 1.86 on 2026-05-05 (icu_*
# and idna_adapter via reqwest), then from 1.86 to 1.88 the same
# day (wiremock 0.6.5 uses let-chains, stabilised in 1.88). Our
# own crates stay on edition2021; the floor moves with ecosystem
# reality, not feature uptake.
rust-version = "1.88"

[workspace.dependencies]
# Substrate dependencies for the conformance harness. Versions are kept
# permissive at the workspace level; the harness's own Cargo.toml pins
# `opentelemetry-proto` exactly per ADR-0003.
opentelemetry-proto = { version = "=0.27.0", default-features = false, features = ["gen-tonic-messages", "logs", "trace", "metrics"] }
prost = "0.13"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
