[package]
name = "aperture"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later because this crate is a server-side platform
# component: it runs as a long-lived process on operator
# infrastructure and is the kind of code the SaaS loophole was used
# to capture in the past. AGPL closes the loophole inside an
# OSI-approved licence. See `LICENSING.md`.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "OTLP gateway. Validates byte sequences via otlp-conformance-harness and hands accepted records to a configurable sink."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[[bin]]
name = "aperture"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# DISTILL-state stub. Per `docs/feature/aperture/distill/wave-decisions.md`:
# the production-tree dependency surface is intentionally minimal so the
# RED integration tests under `tests/` compile against a stable
# public API while DELIVER grows the implementation. Substrate
# dependencies that the binary needs at runtime (tonic, axum, figment,
# tracing-subscriber, reqwest, ...) are LISTED in
# `docs/feature/aperture/design/workspace-layout.md` and DELIVER will
# add them as it lands the corresponding slices.

[dependencies]
# Substrate consumed by the public types declared at DISTILL.
# Aperture's production tree needs `gen-tonic` (not just
# `gen-tonic-messages`) so the binary can build a tonic Server against
# the `LogsServiceServer`/`TraceServiceServer`/`MetricsServiceServer`
# trait surfaces — the workspace-level dep enables only the messages.
opentelemetry-proto = { version = "=0.27.0", default-features = false, features = ["gen-tonic-messages", "gen-tonic", "logs", "trace", "metrics"] }
prost = { workspace = true }

# Async runtime + gRPC server. Slice 01 (walking skeleton) needs both:
# the binary uses Tokio for `main`, the integration tests construct a
# tonic Server bound to an ephemeral loopback port.
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }

# HTTP server. Slice 02 lights up the HTTP/protobuf listener on
# `:4318` plus the `/healthz`/`/readyz` operator probes. axum is the
# Router; hyper provides the underlying server type the integration
# tests reach through reqwest.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }

# Transport-boundary body-size cap (aperture-body-size-cap-v0, ADR-0073).
# The HTTP length-checked read uses `http-body-util::Limited` to abort a
# streamed read once the configured cap is exceeded; the gRPC arm wraps each
# generated service in a `tower-layer`/`tower-service` cap layer that refuses an
# over-limit frame before tonic decodes it. `http`/`bytes`/`http-body` name the
# request/response and body types the layer threads. All six are already in the
# workspace lockfile transitively (via axum/tonic/hyper), so no new external
# surface enters the dependency tree — they are promoted to direct deps so the
# cap module can name them. ADR-0073 D2 (HTTP length-checked seam + gRPC
# request-body refusal layer).
http = "1"
http-body = "1"
http-body-util = "0.1"
tower-service = "0.3"
tower-layer = "0.3"
bytes = "1"

# Async-trait support for `OtlpSink` and `Probe`. ADR-0007.
async-trait = "0.1"

# Observability — `tracing` + `tracing-subscriber` (JSON layer to
# stderr). ADR-0009. Slice 01 needs `event=listener_bound`,
# `request_received`, `sink_accepted` on stderr.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "registry"] }

# JSON shaping for the stderr capture seam used by integration tests
# (`aperture::testing::stderr_capture`). The capture layer turns each
# tracing event into a `serde_json::Value` for easy field interrogation.
serde_json = "1"

# Configuration loader (Slice 07, ADR-0008). `figment` is the canonical
# Rust layered-config library; `serde` provides the derive macros for
# the typed schema; `toml` is the actual TOML parser the figment
# `Toml::string` provider sits on top of. The `deny_unknown_fields`
# posture is per-nested-struct on the schema side so misspelled keys
# fail loud at config load (`event=config_validation_failed`).
figment = { version = "0.10", default-features = false, features = ["toml", "env", "test"] }
serde = { workspace = true }

# HTTP client for the ForwardingSink (Slice 06). Plaintext at v0;
# `tls.enabled=true` (Slice 07) is rejected by the config validator
# so we deliberately stay on the no-default-feature path. `rustls-tls`
# is a future-proof feature gate on the dev-dependency reqwest copy
# the integration tests use; the production tree does NOT enable TLS.
reqwest = { version = "0.12", default-features = false, features = ["http2"] }

# Sibling crate. The harness IS the validator; the integration tests
# will exercise the real harness via the production code path once
# DELIVER fills in the application layer.
#
# The explicit `version = "0.1.0"` is required to satisfy the
# workspace-level `cargo deny check` (Gate 4) `bans.wildcards =
# "deny"` rule: a path-only declaration counts as a wildcard
# dependency. Adding the version makes the dep non-wildcard while
# preserving path-based resolution inside the workspace (cargo
# prefers the path over the registry when both are specified).
# This is the canonical Rust idiom for sibling-crate path deps that
# may eventually be published. Added in the Aperture DEVOPS wave per
# `docs/feature/aperture/devops/wave-decisions.md > A3`.
otlp-conformance-harness = { path = "../otlp-conformance-harness", version = "0.1.0" }

# Sibling crate — the ingest-auth validator (aegis-ingest-auth-v0, ADR-0068).
# Aperture constructs an `aegis::Validator` once at composition (HS256 +
# tenant catalogue) and validates every ingest request's bearer token before
# the body reaches the sink, fail-closed. The explicit `version = "0.1.0"`
# satisfies the workspace `cargo deny` `bans.wildcards = "deny"` rule (a
# path-only dep counts as a wildcard); cargo prefers the in-workspace path.
# No new external surface enters the lockfile — aegis is already in-workspace
# and its `jsonwebtoken` engine is already resolved.
aegis = { path = "../aegis", version = "0.1.0" }

[dev-dependencies]
# Real Tokio runtime for the integration tests (full features so tests
# can use macros/timers freely without re-listing per call site).
tokio = { version = "1.40", features = ["full"] }

# Real tonic + reqwest clients drive Aperture's listeners over the
# loopback network; the assertions hit the wire, not in-process
# function calls. axum graduates to production deps in Slice 02
# (HTTP listener); tonic is in production deps but duplicated here
# as a dev dep so the integration tests opt in to the generated
# client/server stubs without coupling the production tree.
hyper = { version = "1.4" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Protobuf encoders for the test fixtures (the OTel SDK wire format is
# what Aperture must accept).
prost-types = "0.13"

# Provides the `#[cfg_attr(test, mutants::skip)]` attribute used to mark the
# one genuinely-equivalent mutant (GrpcBodyCapService::poll_ready, an
# unconditional delegate to tonic's always-ready service — see
# docs/feature/aperture-body-size-cap-v0/deliver/mutation-equivalent-mutants.md).
# dev-dependency only; never linked into the library. Already in Cargo.lock
# (wal-recovery pins the same version). Non-wildcard for cargo deny Gate 4.
mutants = "0.0.3"

# Mocking + raw HTTP/gRPC clients for adversarial UATs (Slice 06's
# downstream double).
wiremock = "0.6"
http = "1"

# Safe POSIX `kill` for the ADR-0066 SIGTERM-exit-0 subprocess test (no
# `unsafe` libc FFI; rustix does the FFI internally). Mirrors the
# beacon-server SIGHUP-proving test precedent.
rustix = { version = "1", features = ["process"] }

# In-suite HS256 token minting for the ingest-auth acceptance suite
# (`slice_10_ingest_auth*.rs`, aegis-ingest-auth-v0). The same engine aegis
# uses to validate; the tests mint tokens signed with the test config's secret
# for a catalogued test tenant. Already in `Cargo.lock` (9.x) via aegis, so no
# new external/license/advisory surface enters the lockfile (DEVOPS C-DEVOPS-3).
jsonwebtoken = "9"
serde = { workspace = true }

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_http_protobuf_and_readiness"
path = "tests/slice_02_http_protobuf_and_readiness.rs"

[[test]]
name = "slice_03_traces"
path = "tests/slice_03_traces.rs"

[[test]]
name = "slice_04_metrics"
path = "tests/slice_04_metrics.rs"

[[test]]
name = "slice_05_backpressure"
path = "tests/slice_05_backpressure.rs"

[[test]]
name = "slice_06_forwarding_sink"
path = "tests/slice_06_forwarding_sink.rs"

[[test]]
name = "slice_07_tls_schema_knob"
path = "tests/slice_07_tls_schema_knob.rs"

[[test]]
name = "slice_08_graceful_shutdown"
path = "tests/slice_08_graceful_shutdown.rs"

[[test]]
name = "invariant_single_validator"
path = "tests/invariant_single_validator.rs"

[[test]]
name = "invariant_no_telemetry_on_telemetry"
path = "tests/invariant_no_telemetry_on_telemetry.rs"

[[test]]
name = "probe_gold_runner"
path = "tests/probe_gold_runner.rs"

[[test]]
name = "serve_loop_error_surfacing"
path = "tests/serve_loop_error_surfacing.rs"

[[test]]
name = "slice_10_ingest_auth"
path = "tests/slice_10_ingest_auth.rs"

[[test]]
name = "slice_10_ingest_auth_config_reject"
path = "tests/slice_10_ingest_auth_config_reject.rs"

[[test]]
name = "probe_refusal_visibility"
path = "tests/probe_refusal_visibility.rs"
