[package]
name = "beacon"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later because Beacon is a platform-class alerting engine,
# symmetric with Aperture, Sieve, and Codex. See `LICENSING.md` for the
# rationale and the per-crate table.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Beacon — Kaleidoscope's rule-evaluation engine. Reads from any OTel-compatible PromQL backend, evaluates alert rules and SLO burn-rate rules per Google's SRE workbook methodology, emits incidents to webhook / SMTP / Mattermost / Zulip / Grafana OnCall."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
path = "src/lib.rs"

# ----------------------------------------------------------------------
# Slice 01 — walking skeleton.
# Library-only at this commit. Binary (beacon-server) wiring lands in a
# follow-up. Per ADR-0033 the library has no Tokio runtime types in its
# public API; the Sink trait is async via async-trait.
# ----------------------------------------------------------------------

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
humantime = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = "0.6"

# ----------------------------------------------------------------------
# Per-binary integration test declarations.
# ----------------------------------------------------------------------

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_cue_catalogue"
path = "tests/slice_02_cue_catalogue.rs"

[[test]]
name = "slice_03_grouping_and_inhibition"
path = "tests/slice_03_grouping_and_inhibition.rs"

[[test]]
name = "slice_05_slo_burn_rate"
path = "tests/slice_05_slo_burn_rate.rs"

# ----------------------------------------------------------------------
# Lints — forbid(unsafe_code) per the rest of the platform.
# ----------------------------------------------------------------------

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
