[package]
name = "beacon"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later because Beacon is a platform-class alerting engine,
# symmetric with Aperture, Sieve, and Codex. See `LICENSING.md` for the
# rationale and the per-crate table.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Beacon — Kaleidoscope's rule-evaluation engine. Reads from any OTel-compatible PromQL backend, evaluates alert rules and SLO burn-rate rules per Google's SRE workbook methodology, emits incidents to webhook / SMTP / Mattermost / Zulip / Grafana OnCall."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
path = "src/lib.rs"

# ----------------------------------------------------------------------
# Slice 01 — walking skeleton.
# Library-only at this commit. Binary (beacon-server) wiring lands in a
# follow-up. Per ADR-0033 the library has no Tokio runtime types in its
# public API; the Sink trait is async via async-trait.
# ----------------------------------------------------------------------

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
humantime = "2"
# SCAFFOLD: true — store-fsync-durability-v0 DISTILL (Mandate 7).
# The durability seam (FsyncBackend family + atomic_write_snapshot) is
# extracted into wal-recovery (ADR-0060 §4); beacon's rule-state store
# re-exports it. DELIVER keeps this edge.
wal-recovery = { path = "../wal-recovery", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = "0.6"

# ----------------------------------------------------------------------
# Per-binary integration test declarations.
# ----------------------------------------------------------------------

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_cue_catalogue"
path = "tests/slice_02_cue_catalogue.rs"

[[test]]
name = "slice_03_grouping_and_inhibition"
path = "tests/slice_03_grouping_and_inhibition.rs"

[[test]]
name = "slice_04_sink_routing"
path = "tests/slice_04_sink_routing.rs"

[[test]]
name = "slice_05_slo_burn_rate"
path = "tests/slice_05_slo_burn_rate.rs"

# beacon-durable-alert-state-v0 — the RuleStateStore seam (ADR-0040).
[[test]]
name = "v0_slice_01_rule_state_store_seam"
path = "tests/v0_slice_01_rule_state_store_seam.rs"

[[test]]
name = "v1_slice_02_filebacked_durable_recovery"
path = "tests/v1_slice_02_filebacked_durable_recovery.rs"

[[test]]
name = "v1_slice_02_operator_restart_survival"
path = "tests/v1_slice_02_operator_restart_survival.rs"

# store-fsync-durability-v0 slice 06 (beacon rule-state store).
# Two-mechanism durability proving, RED-ready (#[ignore]d).
[[test]]
name = "v1_slice_03_crash_durability"
path = "tests/v1_slice_03_crash_durability.rs"

# SCAFFOLD: true — store-fsync-durability-v0 DISTILL (Mandate 7).
# Out-of-process kill-target for the snapshot-atomicity proving test
# (mechanism (a), ADR-0060 §1/C5). Sets CARGO_BIN_EXE_beacon-crash-target.
[[bin]]
name = "beacon-crash-target"
path = "src/bin/beacon_crash_target.rs"

# ----------------------------------------------------------------------
# Lints — forbid(unsafe_code) per the rest of the platform.
# ----------------------------------------------------------------------

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
