[package]
name = "cinder"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Cinder — Kaleidoscope's tiering port. v0 ships the TieringStore trait + an InMemoryTieringStore adapter; the S3 + OpenDAL + Iceberg adapter lands at v1 behind the same trait. Per-tenant tier metadata for hot / warm / cold tiers plus an age-based lifecycle policy evaluator."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "cinder"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_lifecycle"
path = "tests/slice_02_lifecycle.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
