[package]
name = "cinder"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Cinder — Kaleidoscope's tiering port. v0 ships the TieringStore trait + an InMemoryTieringStore adapter. v1 adds FileBackedTieringStore with NDJSON WAL durability + snapshot compaction; the S3 + OpenDAL + Iceberg adapter lands at v2 behind the same trait. Per-tenant tier metadata for hot / warm / cold tiers plus an age-based lifecycle policy evaluator."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "cinder"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

# Shared torn-tail-tolerant WAL replay (ADR-0059). The file-backed
# `open` replays its NDJSON WAL through this routine, recovering the
# intact acked prefix past a single torn final line and staying
# fail-closed for every other parse failure. Workspace-internal leaf
# crate, AGPL-3.0-or-later like cinder itself.
wal-recovery = { path = "../wal-recovery", version = "0.1.0" }

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_lifecycle"
path = "tests/slice_02_lifecycle.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

[[test]]
name = "v1_slice_03_torn_tail_recovery"
path = "tests/v1_slice_03_torn_tail_recovery.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
